force-app/main/default/objects/Config_Key_Activity__c/Config_Key_Activity__c.object-meta.xml
<CustomObject>
    <label>Config Key Activity</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Config Key Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Config Key Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>