force-app/main/default/objects/Config_Key_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Config Key Activities</relationshipLabel>
    <relationshipName>Config_Key_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>