force-app/main/default/objects/Config_Key_Activity__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <label>Activity Description</label>
    <type>TextArea</type>
</CustomField>