force-app/main/default/objects/Config_Key_Activity__c/fields/Emergency_Key__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Key</label>
    <type>Checkbox</type>
</CustomField>