force-app/main/default/objects/Config_Key_Activity__c/fields/Key_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Expiration_Date__c</fullName>
    <label>Config Key Expiration Date</label>
    <type>Date</type>
</CustomField>