force-app/main/default/objects/Config_Key_Activity__c/fields/License_Key_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Key_Type__c</fullName>
    <label>Config Key Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
                <default>true</default>
                <label>Temporary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>