force-app/main/default/objects/Config_Key_Activity__c/fields/Test_Demo__c.field-meta.xml
<CustomField>
    <fullName>Test_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test/Demo</label>
    <type>Checkbox</type>
</CustomField>